--- a/preview/index.html
+++ b/preview/index.html
@@ -12,17 +12,10 @@
 <meta name="msapplication-navbutton-color" content="#000">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-
-
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
 <link rel="stylesheet" href="../static/css/slick.min.css">
-
 <link rel="stylesheet" href="../static/css/index.css">
-
-
-
-<link rel="shortcut icon" href="../static/images/fav.png"/>
+<!--<link rel="shortcut icon" href="../static/images/fav.png"/>-->
 
 </head>
 <body class="home">
